# AegisLab

./: .gitignore  CNAME  README.md  pyproject.toml
cli/: __init__.py  main.py
data/: incident_history.json  risk_matrix.json  standards.json  taxonomy.json
frontend/: .env.example  App.jsx  index.css  index.html  layout.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/components/agents/: ActionPlanner.jsx  AgentAvatar.jsx  AgentTimeline.jsx  RiskAnalyzer.jsx  ScoreManager.jsx
frontend/components/observation/: ObservationForm.jsx
frontend/components/summary/: SummaryCard.jsx
frontend/components/ui/: select.jsx
frontend/pages/: home.js
frontend/services/: api.js
src/safety_agent/: __init__.py
src/safety_agent/agents/: __init__.py  action_planner.py  base.py  risk_analyzer.py  score_manager.py
src/safety_agent/api/: __init__.py  server.py
src/safety_agent/config/: __init__.py  settings.py
src/safety_agent/llm/: __init__.py  client.py
src/safety_agent/orchestrator/: __init__.py  pipeline.py
src/safety_agent/schemas/: __init__.py  action_plan.py  hazard.py  observation.py  scored_hazard.py
src/safety_agent/tools/: __init__.py  incident_history.py  metrics_db.py  resource_planner.py  risk_matrix.py  standards_lookup.py  taxonomy_db.py
tests/: __init__.py  test_schemas.py
tests/test_agents/: __init__.py  test_risk_analyzer.py
tests/test_orchestrator/: __init__.py  test_pipeline.py
tests/test_tools/: __init__.py  test_resource_planner.py  test_risk_matrix.py
