[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safety-agent-poc"
version = "0.1.0"
description = "AI-driven safety observation workflow PoC with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Safety Team" }
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
safety-agent = "cli.main:app"
safety-agent-api = "safety_agent.api.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/safety_agent", "cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
